Fix: [jetty/jetty.project] In Jetty 13's jetty-home, make all of the environm
Auto-fix for issue #14971

Generated by Codex